k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyone
  namespace: onlyone
  labels:
    app: onlyone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlyone
  template:
    metadata:
      labels:
        app: onlyone
    spec:
      containers:
        - name: nginx
          image: docker.io/bevdev1/onlyone-nginx:v1.01
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi

        - name: gameserver
          image: docker.io/bevdev1/onlyone-gameserver:v1.01
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
