k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: onlyone
  labels:
    app: onlyone
spec:
  selector:
    app: onlyone
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
