k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyone-ingress
  namespace: onlyone
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - onlyone.bevsoft.com
      secretName: bevsoft-wildcard-tls
  rules:
    - host: onlyone.bevsoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
