k8s/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyonegame-ingress
  namespace: onlyone
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - onlyonegame.bevsoft.com
      secretName: bevsoft-wildcard-tls
  rules:
    - host: onlyonegame.bevsoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
